# lazy-rdatasets

./: LICENSE  README.md  pyproject.toml
examples/: example.ipynb
src/lazyrdatasets/: __init__.py
src/rdatasets/: __init__.py  plotting.py
