[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyrdatasets"
version = "0.2.0"
description = "Convenience interface of Reatasets for lazy data scientists."
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "requests",
    "requests-cache",
]
