[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyrdatasets"
version = "0.2.0"
description = "Convenience interface of Reatasets for lazy data scientists."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

keywords = ["datascience", "datasets", "r"]

dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "requests",
    "requests-cache",
]
